# robot-manipulation-with-rrt_star

./: LICENSE  README.md  run.sh
collision_check/: CMakeLists.txt  package.xml
collision_check/launch/: cc.launch
collision_check/scripts/: cc.cpp  cc_dep.cpp
control_node/: CMakeLists.txt  execute_traj.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/camera_demo/: color_recognition.py
devel/lib/collision_check/: collision_check_node
devel/lib/d435i_xarm_setup/: findobj2d_grasp_api  findobj2d_grasp_moveit  obj2base
devel/lib/pkgconfig/: camera_demo.pc  collision_check.pc  control_node.pc  d435i_xarm_setup.pc  dual_xarm6_moveit_config.pc  lite6_moveit_config.pc  mimic_joint_gazebo_tutorial.pc  multi_xarm5.pc  planner.pc  planner_node.pc  roboticsgroup_gazebo_plugins.pc  roboticsgroup_upatras_gazebo_plugins.pc  run_recorded_traj.pc  spawn_object.pc  uf_robot_moveit_config.pc  xarm5_gripper_moveit_config.pc  xarm5_moveit_config.pc  xarm5_vacuum_gripper_moveit_config.pc  xarm6_gripper_moveit_config.pc  xarm6_moveit_config.pc  xarm7_moveit_config.pc  (+14 more)
planner_node/: CMakeLists.txt  control_arm.cpp  move_arm.py  move_to_grasp.py  package.xml  planner.cpp
src/collision_check/: CMakeLists.txt  package.xml
src/control_node/: execute_traj.py  execute_traj_gripper.py  move_to_grasp.py  package.xml
src/planner_node/: CMakeLists.txt  map.txt
src/spawn_object/: CMakeLists.txt  package.xml
src/spawn_object/launch/: spawn_sdf.launch  spawn_urdf.launch
src/spawn_object/media/beer/: model-1_4.sdf  model.sdf
state_machine/: CMakeLists.txt  package.xml
state_machine/src/: fsm.py
(+75 files in other folders)
