<?xml version="1.0"?>
<package>
  <name>spawn_object</name>
  <version>0.0.0</version>
  <description>The spawn_object package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sfenton@todo.todo">sfenton</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
